--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "eslint": "^8.51.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "prettier": "3.0.3",
     "vite": "^4.4.5"
   }
 }
